--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@googlemaps/google-maps-services-js": "^3.4.1",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
+    "box-node-sdk": "^3.8.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1",
@@ -28,6 +30,7 @@
     "nodemailer": "^7.0.4",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
+    "rrule": "^2.8.1",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
